Fixing align button entry pages safari; Fixing accordion icon; Fixing select height step 1; Styling calendar step 3; Add tooltip content & fixing the style;

--- a/src/assets/styles/custom/checkbox-radio.scss
+++ b/src/assets/styles/custom/checkbox-radio.scss
@@ -118,6 +118,7 @@
 .p-prfrm{
 	&-templatelist{
 		&__item{
+			transition : linear .3s;
 			&-wrapper{
 				.b-radio{
 					&.radio{
