--- a/src/assets/styles/custom/select.scss
+++ b/src/assets/styles/custom/select.scss
@@ -9,6 +9,8 @@
 			border-radius: 5px;
 			border: 1px solid $v-ui-border;
 			cursor: pointer;
+			max-height: 34px;
+			min-height: 34px;
 			&:hover{
 				border-color: $v-blue-border;
       	box-shadow: 0 0 4px 1px rgba(131,202,252,0.5);
@@ -16,30 +18,40 @@
 			.multiselect{
 				&__tags{
 					border: none;
-					padding: 6px 40px 6px 8px;
+					padding: 9px 40px 9px 15px;
 					background: transparent;
 					min-height: 0px;
+					line-height: 15px;
+					font-size: 15px;
 					span{
 						&.multiselect__single{
 							margin-bottom: 0;
-							vertical-align: -webkit-baseline-middle;
+							font-size: 15px;
+							line-height: 15px;
+							padding-left: 0;
+							min-height: 0;
 						}
 					}
 
 					.multiselect__tags-wrap{
 						.custom__tag{
-							font-size: 16px;
+							font-size: 15px;
 							display:none;
-							vertical-align: bottom;
-							padding-left: 5px;
-							padding-top: 5px;
-							line-height: 20px;
+							vertical-align: middle;
+							line-height: 15px;
 
 							&:first-child{
 								display: inline-block;
 							}
 						}
 					}
+				}
+
+				&__input {
+					font-size: 15px;
+					line-height: 15px;
+					padding-left: 0;
+					top: -4px;
 				}
 			}
 
@@ -50,7 +62,7 @@
 						.custom__tag{
 							font-size: 16px;
 							display:none;
-							vertical-align: bottom;
+							vertical-align: middle;
 							padding-left: 5px;
 							padding-top: 5px;
 							line-height: 20px;
