--- a/src/assets/styles/pages/entry-pages.scss
+++ b/src/assets/styles/pages/entry-pages.scss
@@ -33,7 +33,8 @@
         cursor: pointer;
         outline: none;
         font-family: "Avenir Next Medium";
-        font-size: 1.5rem;
+        font-size: 15px;
+        line-height: 15px;
         &:hover, &:active, &:focus {
             color: $v-green-dark;
             text-decoration: underline;
